# todo-rust

./: Cargo.toml  Dockerfile
.github/workflows/: main.yml
.sqlx/: query-077aa6d4172deb85efa44583862a8b050e9e97bca049af1a53b9258d1ef88772.json  query-20865c8b704da8b224ec55560e81afe473368d86c695b7705a5f002f61060bf5.json  query-73e3368a2bf98fb383f6185e4dd4c3a0b43fd14bb3c6eee839ee761183484051.json
migrations/: 20251107075757_create_todos_table.sql
src/: error.rs  extractor.rs  main.rs  middleware.rs  model.rs  response.rs  router.rs  state.rs
src/handler/: health.rs  mod.rs  task.rs
src/repository/: mod.rs  task_repository.rs
src/service/: task_service.rs
