[package]
name = "todo-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.6"
tokio = { version = "1.48.0", features = ["full", "signal", "sync"] }
log = "0.4.28"
env_logger = "0.11.8"
sqlx = { version = "0.8.6", features = ["chrono", "mysql", "runtime-tokio"] }
dotenv = "0.15.0"
thiserror = "2.0.17"
serde = { version = "1.0.228", features = ["derive"] }
chrono = { version = "0.4.42", features = ["serde"] }
validator = { version = "0.20.0", features = ["derive"] }
